# LiveKit_MVP_Agent

./: .env.example  .gitignore  AUDIO_PROCESSING_FIXED.md  COMMANDS.md  DOCKER_SETUP_COMPLETE.md  ELEVENLABS_FRENCH_LEARNING.md  ENVIRONMENT_SETUP.md  FIXES_APPLIED.md  FIX_SUMMARY.md  FRENCH_TUTOR.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PIPELINE_INTEGRATION_COMPLETE.md  QUICKSTART.md  README.md  SUCCESS_EVERYTHING_WORKING.md  SUCCESS_SUMMARY.md  UI_SUCCESS.md  UPDATED_ELEVENLABS_ANALYSIS.md  WEBUI_IMPLEMENTATION_COMPLETE.md  WEBUI_READY.md  WEBUI_STT_FIX.md  check_config.py  docker-compose.yaml  launch_ui.py  pyproject.toml  run_ui.sh  settings.test.toml  simple_test.py  standalone_demo.py  talk_to_agent.py  test_bilingual_capabilities.py  test_elevenlabs_env.py  test_medium_whisper.py  test_voice_config.py  upgrade_summary.py  upgrade_whisper.py
.github/workflows/: ci.yaml
config/: models.yaml  settings.example.toml  voices.yaml
docker/: Dockerfile.webui
elevenlabs_integration/: README.md  __init__.py  config.py  demo.py  example_tts.py  french_learning_config.py  french_learning_demo.py  pipeline.py  requirements.txt  simple_demo.py  stt_adapter.py  test_full_features.py  test_new_key.py  test_real_stt.py  test_setup.py  test_stt.py  tts_adapter.py  voice_demo.py
scripts/: bootstrap.sh  demo.sh  run_local.sh  tts_smoke.py  verify.sh
src/livekit_mvp_agent/: __init__.py  app.py  config.py  logging_setup.py  pipeline.py
src/livekit_mvp_agent/adapters/: __init__.py  livekit_io.py  llm_ollama.py  stt_whisper.py  tts_elevenlabs.py  tts_elevenlabs_stream.py  tts_kokoro.py  tts_piper.py  vad_silero.py
src/livekit_mvp_agent/ui/: __init__.py  app_ui.py  audio_io.py  pipeline_worker.py
src/livekit_mvp_agent/utils/: __init__.py  audio.py  timing.py  tts_helpers.py
src/livekit_mvp_agent/webui/: __init__.py  server.py
tests/: test_ollama.py  test_settings.py  test_tts_elevenlabs.py  test_vad.py
www/: app.js  index.html  style.css
